# se_ndt

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README  README.md  package.xml  se_ndt-config.cmake  start_docker.sh  tags
data/: p1.csv  p2.csv  p3.csv
include/: other.hpp  pose_graph_3d_error_term.h  pose_optimizer.h  profiler.hpp  rviz_ndt.h  types.h
include/se_ndt/: features_CI.hpp  file_loader.hpp  ndt_fuser_hmt_se.h  ndt_histogram.h  ndt_matcher_d2d_se.h  ndt_matcher_p2d_se.h  se_ndt.hpp
ndt_map/: .tar  CMakeLists.txt  ndt_debug.launch  package.xml
ndt_map/include/ndt_map/: lazy_grid.h  ndt_cell.h  ndt_conversions.h  ndt_histogram.h
ndt_map/include/ndt_map/deprecated/: adaptive_oc_tree.h
ndt_map/include/ndt_map/deprecated/impl/: ndt_occupancy_map.hpp
ndt_map/include/ndt_map/impl/: EventCounterData.hpp
ndt_map/msg/: NDTCellMsg.msg  NDTMapMsg.msg
ndt_map/src/: lazy_grid.cpp
ndt_registration/: .tar  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  ndt_registration.launch  package.xml
ndt_registration/include/ndt_registration/: ndt_matcher_d2d.h  ndt_matcher_d2dl.h  ndt_matcher_p2dl.h
ndt_registration/src/: .ndt_matcher_d2d_loam.cpp.swo  ndt_matcher_d2d_feature.cpp  ndt_matcher_d2d_loam.cpp  ndt_matcher_d2d_loam_back.cpp  ndt_matcher_p2d.cpp  ndt_matcher_p2d_l.cpp
ndt_registration/test/: batchTestRangerAccuracy.cc  check_reg.cc  convert.cc  deathmatch.cc  feature_registration.cc  from_jff.cc  narf_extraction.cc  narf_registration.cc  ndt_feature_test.cc  ndt_histogram_registration.cc  ndt_matcher_node.cc  ndt_registration_test.cc  p2d_deathmatch.cc  plot_cov.m  reconstruct.cc  simple.cc  test_covariance.cc  test_ndt_mapper.cc
oru_minimal/include/ndt_map/: cell_vector.h  lazy_grid.h  ndt_cell.h  ndt_map.h  ndt_map.h.orig  ndt_map_hmt.h  pointcloud_utils.h  spatial_index.h  spatial_index.h.orig
oru_minimal/include/ndt_map/impl/: pointcloud_utils.hpp
oru_minimal/include/ndt_registration/: ndt_matcher_d2d.h  ndt_matcher_d2d_2d.h  ndt_matcher_d2d_2d.h.orig  ndt_matcher_p2d.h
oru_minimal/include/ndt_visualisation/: CMyEllipsoid.h  NDTVizGlut.hh  ndt_viz.h
oru_minimal/ndt_map/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  ndt_map-config.cmake
oru_minimal/ndt_map/include/ndt_map/: depth_camera.h
oru_minimal/ndt_map/include/ndt_map/deprecated/: cell.h  ndt_occupancy_map.h  oc_tree.h
oru_minimal/ndt_map/src/: EventCounterData.cpp  adaptive_oc_tree.cpp  ndt_histogram.cpp  ndt_map_hmt.cpp  oc_tree.cpp
oru_minimal/ndt_registration/: CMakeLists.txt
oru_minimal/ndt_registration/include/ndt_registration/: ndt_matcher_d2d_feature.h
oru_minimal/ndt_registration/src/: l_back.patch  ndt_matcher_d2d_2d.cpp
oru_minimal/src/: CMyEllipsoid.cpp  NDTVizGlut.cc  cell_vector.cpp  lazy_grid.cpp  ndt_cell.cpp  ndt_cell.cpp.orig  ndt_map.cpp  ndt_map_hmt.cpp  ndt_matcher_d2d.cpp  ndt_matcher_d2d.cpp.orig  ndt_matcher_d2d_2d.cpp  ndt_viewer.cc
scripts/: draw.py  precision_recall.py  process.py  read_gt.py
src/: big_cloud_test.cpp  big_cloud_test_no_se.cpp  big_cloud_test_no_se2.cpp  closest_transforms.cpp  concat_transform.cpp  csv_to_pcd.cpp  csv_uniform_sampling.cpp  eval.cpp  evaluate_files.cpp  exp_clouds.cpp  features.cpp  gen_transforms.cpp  inverse_transforms.cpp  kitti_loop_close.cpp  kitti_loop_close_similarity_matrix.cpp  kitti_register.cpp  kitti_slam.cpp  lazy_grid_improved.cpp  loader_test.cpp  ndt_fuser_hmt_se.cpp  ndt_histogram.cpp  ndt_matcher_d2d_se.cpp  ndt_matcher_p2d_se.cpp  offline_graph_opt.cpp  other.cpp  polesRegister.cpp  polesRegister_fuser.cpp  polesRegister_kalman.cpp  polesRegister_ndt.cpp  polesRegister_ndt_r.cpp  pose_graph_3d.cc  ros_read_register.cpp  ros_receive_tf.cpp  ros_register.cpp  ros_register_d2d_ndt.cpp  rpy_to_transform.cpp  rsdRegister.cpp  rsdRegister2.cpp  rsdRegister3.cpp  rsd_register_fuser.cpp  (+9 more)
