<?xml version="1.0"?>
<package>
  <name>se_ndt</name>
  <version>0.0.0</version>

  <description>
	  SE-NDT
  </description>

  <maintainer email="azaganidis@openmailbox.org">Anestis Zaganidis</maintainer>

  <license>BSD</license>

  <author email="azaganidis@openmailbox.org">Anestis Zaganidis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>ndt_registration</build_depend>
  <build_depend>ndt_map</build_depend>
  <build_depend>ndt_fuser</build_depend>
  
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>ndt_registration</run_depend>
  <run_depend>ndt_map</run_depend>
  <run_depend>ndt_fuser</run_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
