<?xml version="1.0"?>
<package format="2">
  <name>se_ndt</name>
  <version>0.0.0</version>
  <description> SE-NDT </description>
  <maintainer email="anestis.zag@gmail.com">Anestis Zaganidis</maintainer>
  <license>BSD</license>
  <author email="anestis.zag@gmail.com">Anestis Zaganidis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_conversions</exec_depend>

  <export>
  </export>
</package>
