<package>
  <name>ndt_map</name>
  <version>1.0.30</version>
  <description>Contains the definitions of the 3D Normal Distributions Transform data structures, 
     used for mapping, registration, etc.</description>
  <maintainer email="jari.p.saarinen@gmail.com">Jari Saarinen</maintainer>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <maintainer email="tomasz.kucner@oru.se">Tomasz Kucner</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ndt_map</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Todor Stoyanov</author>
  <author>Jari Saarinen</author>
  <author>Henrik Andreasson</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>libpcl-all</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>pointcloud_vrml</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->

<!--export>
    <cpp lflags="-L${prefix}/lib" cflags="-I${prefix}/include"/>
</export-->

</package>
